--- a/index.html
+++ b/index.html
@@ -34,10 +34,7 @@
     <section class="home" id="home">
         <div class="content">
             <h2>Professional marketing copy for anyone</h2>
-            <div class="pars" style="display: flex; margin-top: 5rem;">
-                <img src="/bitmoji2.jpeg"  height="100rem" alt="" style="margin-right: 10rem;">
                 <p>We blend insights and strategy to create digital products for forward-thinking organisations. </p>
-            </div>
             <a href="" class="home-btn">Explore Now</a>
         </div>
         <div class="images">
@@ -116,7 +113,7 @@
         <!--Footer section-->
     <section class="footer">
         <div class="icons">
-        <i class="fab fa-facebook"></i>
+       <a href=""></a> <i class="fab fa-facebook"></i>
         <i class="fab fa-twitter"></i>
         <i class="fab fa-google"></i>
         <i class="fab fa-instagram"></i>
